fixed footer issue and wrapped about & scholarships pages in divs to make consistent style

--- a/frontend/src/building_components/Footer/style.css
+++ b/frontend/src/building_components/Footer/style.css
@@ -3,7 +3,7 @@
 
   text-align: center;
   position: relative;
-  top: 0 !important;
+  bottom: 0 !important;
   height: 40px !important;
   background-color: #122f5e;
   color: white;
